update made in class

--- a/list.html
+++ b/list.html
@@ -25,6 +25,7 @@
             <li>Remove</li>
             <li>Sort</li>
             <li>Reverse</li>
+            <li>Mr P's update</li>
         </ul>
 
         <style>
